--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ html {
     overscroll-behavior-x: none !important;
     overscroll-behavior: none !important;
     scroll-behavior: smooth;
-    height: 100%;
     overflow-x: hidden;
 }
 
@@ -27,7 +26,7 @@ body {
     overscroll-behavior: none !important;
     scroll-behavior: smooth;
     position: relative;
-    height: 100%;
+    min-height: 100vh;
 }
 
 /* Prevent overscroll on all elements */
